--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="author" content="Stefano Coretta" />
     <script src="libs/header-attrs-2.9/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
     <link href="libs/tachyons-4.12.0/tachyons.min.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
@@ -19,6 +18,8 @@
     <script src="libs/Proj4Leaflet-1.0.1/proj4leaflet.js"></script>
     <link href="libs/rstudio_leaflet-1.3.1/rstudio_leaflet.css" rel="stylesheet" />
     <script src="libs/leaflet-binding-2.0.4.1/leaflet.js"></script>
+    <link rel="stylesheet" href="ipa-fonts.css" type="text/css" />
+    <link rel="stylesheet" href="custom.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -27,8 +28,8 @@ class: center, middle, inverse, title-slide
 # The more we learn the less we know
 ## (Un)resolved questions on the voicing effect
 ### Stefano Coretta
-### IPS @ LMU Munich
-### 2016/12/12 (updated: 2021-07-26)
+### Institute of Phonetics and Speech Processing, LMU Munich
+### 28th July 2021, PhoPho Colloquium at the University of Potsdam
 
 ---
 
@@ -79,7 +80,7 @@ class: center middle
 
 ---
 
-# Voicing as a linguistic contrast
+# Voicing as a lexical contrast
 
 .f6[(Haspelmath 2010, 2015, 2020, 2021)]
 
@@ -120,6 +121,8 @@ class: center middle
 .bg-washed-green.bw2.br3.center[
 &lt;br&gt;
 
+.small-caps[voicing]
+
 .f2.small-caps[voiceless]
 
 .f2[~]
@@ -136,6 +139,14 @@ class: center middle
 .pull-right[
 VE in whispered speech and in word-final-devoicing languages.
 ]
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
 ---
 
 class: inverse center middle
@@ -148,10 +159,18 @@ class: inverse center middle
 
 https://app.sli.do/event/bhuf7xqj
 
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
 ---
 
 # Myths
 
+&lt;br&gt;
 
 .bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
 **Myth 1**. The voicing effect is a very common phenomenon.
@@ -162,12 +181,19 @@ https://app.sli.do/event/bhuf7xqj
 ]
 
 .bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
-**Myth 3**. The magnitude of the voicing effect in English is greater relative to that of other languages.
+**Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
 ]
 
 .bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
-**Myth 4**. The ratio of Vowel to Consonant duration is stable across speech rates.
+**Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
 ]
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
 
 ---
 
@@ -175,8 +201,94 @@ class: middle
 
 # How common is the voicing effect?
 
-<div id="htmlwidget-34e77d2cac1e73872eeb" style="width:100%;height:400px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-34e77d2cac1e73872eeb">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-edddb392b9989682d070" style="width:100%;height:400px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-edddb392b9989682d070">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# Myths
+
+&lt;br&gt;
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 1**. The voicing effect is a very common phenomenon.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 2**. Polish and Czech do not show a voicing effect.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
+]
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# Polish and Czech: do they or do they not?
+
+&lt;br&gt;
+
+|            | Absence of a VE         | Presence of a VE            |
+|:-----------|:------------------------|:----------------------------|
+| **Polish** | Jassem &amp; Richter (1989) | Slowiaczek &amp; Dinnsen (1985) |
+|            | Keating (1984           | Nowak (2006)                |
+|            | Strycharczuk (2012)     | Malisz &amp; Klessa (2008)      |
+|            |                         | Coretta (2019)              |
+|            |                         |                             |
+| **Czech**  | Keating (1984a)         | Machač &amp; Skarnitzl (2007)   |
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# Myths
+
+&lt;br&gt;
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 1**. The voicing effect is a very common phenomenon.
+]
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 2**. Polish and Czech do not show a voicing effect.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
+]
+
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
+]
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
 
 ---
 
@@ -188,17 +300,37 @@ class: middle
 
 # Direct comparative studies
 
+Chen 1970: English, French, Russian, Korean
+
+Mack 1982: English, French, English/French bilinguals
+
+Laeufer 1992: English and French.
+
+Tanner et al. 2019: Varieties of English.
+
+Coretta in progress: English, Italian, Polish.
+
+---
+
+class: center middle
+
+![:scale 80%](img/mar-eff-by-lang.png)
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
 
 
 ---
 
-# Polish and Czech: do they or do they not?
+class: middle
 
----
+# "The voicing effect is phonologised in English"
 
-# Comparison of English, Italian, Polish
-
-
+## de Jong 1991, de Jong 2004, Solé, Beddor &amp; Ohala 2007, Sanker 2019
 
 ---
 
@@ -305,60 +437,210 @@ Every type of sound variation/alternation is "phonologised" (i.e. neuro-cognitiv
 
 
 
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
 ---
 
-# Contextual effects (within-system)
+# Myths
 
-- Greater effect in pre-pausal words.
+&lt;br&gt;
 
-- Greater effect in stressed vowels.
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 1**. The voicing effect is a very common phenomenon.
+]
 
-- Greater effect in word-final syllables.
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 2**. Polish and Czech do not show a voicing effect.
+]
 
-- Greater effect in word-initial syllables along the hierarchy trisyllabic &gt; disyllabic &gt; monosyllabic.
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
+]
 
-- Greater effect in lower vowels.
+.bg-washed-green.b--dark-green.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
+]
+
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# Contextual effects (in English)
+
+.pull-left[
+## Stop vs fricative
+
+**Greater effect with fricatives than with stops**
+
+- House &amp; Fairbanks (1953),  Laeufer (1992), Zimmerman &amp; Sapon (1958).
+
+**Greater effect with stops than with fricatives**
+
+- Tanner et al. (2019).
+]
 
 --
 
-They all have in common greater baseline vowel duration.
+.pull-right[
+## Stop vs sonorant
+
+**Nasals exercise an intermediate effect** between that of voiceless and voiced stops but closer to that of the latter
+
+- House &amp; Fairbanks (1953), Zimmerman &amp; Sapon (1958).
+
+**Vowels are longer when followed by nasals than when followed by voiced stops**
+
+- Peterson &amp; Lehiste (1960).
+
+**Vowels have the same duration** when followed by nasals and voiced stops.
+
+- Lisker (1974).
+
+]
 
 ---
 
-# Contextual effects (within-system)
+# Contextual effects (in English) 
 
-Manner
+**Narrow focus increases the effect of voicing in English but not in Arabic**
 
-- Stop vs fricative.
+- de Jong 2004.
+- de Jong &amp; Zawaydeh 2002.
 
-- Obstruent vs sonorant.
+**The ratio of vowel-to-consonant duration is the same across speaking rates**
+
+- Port &amp; Dalby 1982.
 
 --
 
-Mixed results.
+## BUT...
+
+**Vowel duration is a more robust cue than vowel-to-consonant ratio**
+
+- Luce &amp; Charles-Luce 1985.
+
+**The ratio of vowel-to-consonant duration DOES change across speaking rates**
+
+- Ko 2018.
+
+---
+
+# Contextual effects (in English) 
+
+- Greater effect in **pre-pausal** words (Umeda 1975).
+
+- Greater effect in **stressed vowels** (Davis &amp; Summers 1989).
+
+- Greater effect in **word-final syllables** (Abdelli-Beruh 2004).
+
+- Greater effect in word-initial syllables along the hierarchy **trisyllabic &gt; disyllabic &gt; monosyllabic** (Port 1981).
+
+- Greater effect in **lower vowels** (Laeufer 1992).
+
+--
+
+&lt;br&gt;
+
+.f2[They all have in common greater baseline vowel duration.]
 
 
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# Myths
+
+&lt;br&gt;
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 1**. The voicing effect is a very common phenomenon.
+]
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 2**. Polish and Czech do not show a voicing effect.
+]
+
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
+]
+
+.bg-washed-orange.b--dark-orange.ba.bw2.br3.shadow-5.ph4.mt3[
+**Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
+]
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
 
 
 ---
 
-# (Attempted) meta-analysis
+class: center middle inverse
+
+# .small-caps[(attempted) meta-analysis]
+
+???
+
+13 studies. 17 effect estimates (13 word-final, 4 non-word-final).
 
 ---
 
-# Accounts
+class: center middle
 
-But what is the explanandum?
-
----
-
-# Summary
-
+![:scale 80%](img/ve-en-marginal.png)
 
 ---
 
-# What's next?
+class: center middle
 
+![:scale 80%](img/ve-en-shrink.png)
+
+
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+&lt;!-- ----------------------------------------------------------------- --&gt;
+
+---
+
+# HIC SVNT LEONES
+
+&lt;br&gt;
+
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
+**HIGHEST PRIORITY**. Investigation of **un(der)-studied and un(der)-represented** languages.
+]
+
+--
+
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
+**Direct comparison** in cross-linguistic studies.
+]
+
+--
+
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
+**Replication** of prior studies with more appropriate sample sizes.
+]
+
+--
+
+.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
+**Share data and materials** (experimental materials, statistical analysis code, etc).
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
