--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ class: center middle
 .f6[(Haspelmath 2010, 2015, 2020, 2021)]
 
 .pull-left[
-.center.f2.small-caps[language-particular category]
+.center.f3.small-caps[language-particular category]
 
 &lt;br&gt;
 
@@ -114,30 +114,24 @@ class: center middle
 --
 
 .pull-right[
-.center.f2.small-caps[comparative concept]
+.center.f3.small-caps[comparative concept]
 
 &lt;br&gt;
 
 .bg-washed-green.bw2.br3.center[
-&lt;br&gt;
-
-.small-caps[voicing]
-
-.f2.small-caps[voiceless]
-
-.f2[~]
-
-.f2.small-caps[voiced]
-
-&lt;br&gt;
+.f1.small-caps[voicing]
 ]
+
+&lt;br&gt;
+
+.f2.center.small-caps[voiceless ~ voiced]
 
 ]
 
 --
 
 .pull-right[
-VE in whispered speech and in word-final-devoicing languages.
+VE in **whispered** speech and in **word-final-devoicing** languages.
 ]
 
 
@@ -201,8 +195,8 @@ class: middle
 
 # How common is the voicing effect?
 
-<div id="htmlwidget-edddb392b9989682d070" style="width:100%;height:400px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-edddb392b9989682d070">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-89dc91d5d63420df860e" style="width:100%;height:400px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-89dc91d5d63420df860e">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
 
 
 
@@ -248,7 +242,7 @@ class: middle
 |            | Absence of a VE         | Presence of a VE            |
 |:-----------|:------------------------|:----------------------------|
 | **Polish** | Jassem &amp; Richter (1989) | Slowiaczek &amp; Dinnsen (1985) |
-|            | Keating (1984           | Nowak (2006)                |
+|            | Keating (1984)          | Nowak (2006)                |
 |            | Strycharczuk (2012)     | Malisz &amp; Klessa (2008)      |
 |            |                         | Coretta (2019)              |
 |            |                         |                             |
@@ -300,15 +294,18 @@ class: middle
 
 # Direct comparative studies
 
-Chen 1970: English, French, Russian, Korean
-
-Mack 1982: English, French, English/French bilinguals
-
-Laeufer 1992: English and French.
-
-Tanner et al. 2019: Varieties of English.
-
-Coretta in progress: English, Italian, Polish.
+.f2[
+- **Chen 1970**
+  - English, French, Russian, Korean
+- **Mack 1982**
+  - English, French, English/French bilinguals
+- **Laeufer 1992**
+  - English and French.
+- **Tanner et al. 2019**
+  - Varieties of English.
+- **Coretta in progress**
+  - English, Italian, Polish.
+]
 
 ---
 
@@ -328,9 +325,11 @@ class: center middle
 
 class: middle
 
-# "The voicing effect is phonologised in English"
+&gt; .f1[The voicing effect is phonologised in English.]
 
-## de Jong 1991, de Jong 2004, Solé, Beddor &amp; Ohala 2007, Sanker 2019
+&lt;br&gt;
+
+.pull-right.f3[— de Jong 1991, de Jong 2004, Solé, Beddor &amp; Ohala 2007, Sanker 2019, ...]
 
 ---
 
@@ -549,7 +548,7 @@ Every type of sound variation/alternation is "phonologised" (i.e. neuro-cognitiv
 
 &lt;br&gt;
 
-.f2[They all have in common greater baseline vowel duration.]
+.f2[These context share greater intrinsic vowel duration.]
 
 
 &lt;!-- ----------------------------------------------------------------- --&gt;
@@ -575,7 +574,7 @@ Every type of sound variation/alternation is "phonologised" (i.e. neuro-cognitiv
 **Myth 3**. The magnitude of the voicing effect in English is greater than that of other languages.
 ]
 
-.bg-washed-orange.b--dark-orange.ba.bw2.br3.shadow-5.ph4.mt3[
+.bg-washed-yellow.b--yellow.ba.bw2.br3.shadow-5.ph4.mt3[
 **Myth 4**. The voicing effect is modulated by phonological contexts in systematic ways.
 ]
 
@@ -600,14 +599,13 @@ class: center middle inverse
 
 class: center middle
 
-![:scale 80%](img/ve-en-marginal.png)
+![:scale 80%](img/ve-en-shrink.png)
 
 ---
 
 class: center middle
 
-![:scale 80%](img/ve-en-shrink.png)
-
+![:scale 80%](img/ve-en-marginal.png)
 
 &lt;!-- ----------------------------------------------------------------- --&gt;
 &lt;!-- ----------------------------------------------------------------- --&gt;
