:recycle: - edit slides

--- a/index.html
+++ b/index.html
@@ -141,19 +141,17 @@ VE in **whispered** speech and in **word-final-devoicing** languages.
 &lt;!-- ----------------------------------------------------------------- --&gt;
 &lt;!-- ----------------------------------------------------------------- --&gt;
 
+
+
 ---
 
-class: inverse center middle
+class: center middle inverse
 
-# sli.do
-
-# 999000
+&lt;iframe src="https://wall.sli.do/event/bhuf7xqj" width="1000" height="600" style="border:none;"&gt;&lt;/iframe&gt;
 
 ???
 
 https://app.sli.do/event/bhuf7xqj
-
-
 
 &lt;!-- ----------------------------------------------------------------- --&gt;
 &lt;!-- ----------------------------------------------------------------- --&gt;
@@ -195,8 +193,8 @@ class: middle
 
 # How common is the voicing effect?
 
-<div id="htmlwidget-89dc91d5d63420df860e" style="width:100%;height:400px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-89dc91d5d63420df860e">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-ad3575aa3bf02f1f14e7" style="width:100%;height:400px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-ad3575aa3bf02f1f14e7">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircleMarkers","args":[[53,48.649,48,46.9068585714,30.17,26.0876,24,52,41.850397,25,43.0464,63.4837,35,37.5,55.1429,59.92,40.4414,59.800634,16.4529,59,49.873398,51.8439],[-1,12.4676,2,19.6555271429,47.5,91.2932,90,5,43.78613,77,12.6489,-19.0212,135,128,23.9601,10.71,-1.11788,17.389526,78.7024,50,15.10437,18.6255],10,null,null,{"interactive":true,"className":"","stroke":false,"color":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"weight":5,"opacity":0.5,"fill":true,"fillColor":["#FDC086","#FDC086","#FDC086","#BF5B17","#7FC97F","#FDC086","#FDC086","#FDC086","#386CB0","#FDC086","#FDC086","#FDC086","#FFFF99","#F0027F","#FDC086","#FDC086","#FDC086","#FDC086","#BEAED4","#FDC086","#FDC086","#FDC086"],"fillOpacity":0.8},null,null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]},{"method":"addLegend","args":[{"colors":["#7FC97F","#BEAED4","#FDC086","#FFFF99","#386CB0","#F0027F","#BF5B17"],"labels":["Afro-Asiatic","Dravidian","Indo-European","Japonic","Kartvelian","Koreanic","Uralic"],"na_color":null,"na_label":"NA","opacity":0.5,"position":"topright","type":"factor","title":"Family","extra":null,"layerId":null,"className":"info legend","group":null}]}],"limits":{"lat":[16.4529,63.4837],"lng":[-19.0212,135]}},"evals":[],"jsHooks":[]}</script>
 
 
 
@@ -618,7 +616,7 @@ class: center middle
 
 &lt;br&gt;
 
-.bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
+.bg-washed-red.b--dark-red.ba.bw2.br3.shadow-5.ph4.mt3[
 **HIGHEST PRIORITY**. Investigation of **un(der)-studied and un(der)-represented** languages.
 ]
 
@@ -639,6 +637,20 @@ class: center middle
 .bg-washed-blue.b--dark-blue.ba.bw2.br3.shadow-5.ph4.mt3[
 **Share data and materials** (experimental materials, statistical analysis code, etc).
 ]
+
+---
+
+class: center middle inverse
+
+![:scale 40%](img/thanks.jpg)
+
+---
+
+class: middle inverse
+
+# References can be found here:
+
+## https://stefanocoretta.github.io/biblio/
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
